Added portfolio page

--- a/P2/index.html
+++ b/P2/index.html
@@ -174,7 +174,7 @@
                     <h3>View all our works</h3>
                     <p>For nearly 50 years, we have successfully completed projects around the world, from Argentina to
                         Canada, and Russia to Spain.</p>
-                    <a href="#">Look at our portfolio ></a>
+                    <a href="./pages/portfolio.html">Look at our portfolio ></a>
                 </div>
                 <img src="./img/more-projects.jpg" alt="project site">
             </div>
