--- a/P2/pages/about.html
+++ b/P2/pages/about.html
@@ -41,87 +41,123 @@
 
     <main>
         <section class="wrap-content">
-            <h3 class="body-heading">Our team</h3>
-            <div class="two-column font-large team">
-                <div>
-                    <img src="../img/max.jpg" alt="max">
+            <h3 class="body-heading">Our team at SEEDA</h3>
+
+            <div class="font-large">
+                <div class="team">
                     <h3>Max Chernetsov</h3>
-                    <p>A Professional Engineer registered in Alberta, Canada, with over 23 years of capital construction
-                        engineering, procurement and logistics experience with major Oil & Gas and Mining companies on
-                        several multi-billion projects valued near $22 Billion in North America, Europe, Asia, and
-                        Africa.
-                    </p>
+                    <div class="two-column">
+                        <img src="../img/max.jpg" alt="max">
+                        <div>
+                            <p>A Professional Engineer registered in Alberta, Canada, with over 23 years of capital
+                                construction
+                                engineering, procurement and logistics experience with major Oil & Gas and Mining
+                                companies
+                                on
+                                several multi-billion projects valued near $22 Billion in North America, Europe, Asia,
+                                and
+                                Africa.
+                            </p>
 
-                    <p>He is based in Calgary, Canada and is fluent in English and Russian - both written and spoken.
-                    </p>
-                    <a
-                        href="https://www.google.com/url?q=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fchernetsov%2F&sa=D&sntz=1&usg=AFQjCNHEGzBN2hoJpLAjLWZOk4k6UPvl4Q">View
-                        his LinkedIn profile</a>
+                            <p>He is based in Calgary, Canada and is fluent in English and Russian - both written and
+                                spoken.
+                            </p>
+                            <a
+                                href="https://www.google.com/url?q=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fchernetsov%2F&sa=D&sntz=1&usg=AFQjCNHEGzBN2hoJpLAjLWZOk4k6UPvl4Q">View
+                                his LinkedIn profile</a>
+                        </div>
+                    </div>
                 </div>
 
-                <div>
-                    <img src="../img/dioni.jpg" alt="dioni">
+                <div class="team">
                     <h3>Dioni Cardona</h3>
-                    <p>A Professional Engineer registered in Alberta, Canada with extensive experience as a quality
-                        management professional and as a process engineer with a global EPFC company that provides
-                        engineering procurement, fabrication, construction services for major clients in Canada and
-                        worldwide.
-                    </p>
+                    <div class="two-column">
+                        <img src="../img/dioni.jpg" alt="dioni">
+                        <div>
+                            <p>A Professional Engineer registered in Alberta, Canada with extensive experience as a
+                                quality
+                                management professional and as a process engineer with a global EPFC company that
+                                provides
+                                engineering procurement, fabrication, construction services for major clients in Canada
+                                and
+                                worldwide.
+                            </p>
 
-                    <p>
-                        He has mentored and supervised a number of new graduate
-                        Engineers-in-Training (EIT), supported and provided professional references as a partial
-                        requirement of the association as a step towards achieving a professional designation in the
-                        practice of the engineering profession.
-                    </p>
+                            <p>
+                                He has mentored and supervised a number of new graduate
+                                Engineers-in-Training (EIT), supported and provided professional references as a partial
+                                requirement of the association as a step towards achieving a professional designation in
+                                the
+                                practice of the engineering profession.
+                            </p>
 
-                    <p>
-                        Very significant exposures to various multi-cultural working environment for over 3 decades,
-                        speaks native Filipino language, very fluent in oral and written English communication, and also
-                        fluent in the Spanish language.
-                    </p>
-                    <a
-                        href="https://www.google.com/url?q=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fdioni-cardona-p-eng-861a95b%2F&sa=D&sntz=1&usg=AFQjCNEiv5-xa67P0yOlS4v9sBC2MbOwwg">View
-                        his LinkedIn profile</a>
+                            <p>
+                                Very significant exposures to various multi-cultural working environment for over 3
+                                decades,
+                                speaks native Filipino language, very fluent in oral and written English communication,
+                                and
+                                also
+                                fluent in the Spanish language.
+                            </p>
+                            <a
+                                href="https://www.google.com/url?q=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fdioni-cardona-p-eng-861a95b%2F&sa=D&sntz=1&usg=AFQjCNEiv5-xa67P0yOlS4v9sBC2MbOwwg">View
+                                his LinkedIn profile</a>
+                        </div>
+                    </div>
                 </div>
-            </div>
 
 
-            <div class="two-column font-large team">
-                <div>
-                    <img src="../img/dima.jpg" alt="dima">
+                <div class="team">
                     <h3>Dima Albdewi</h3>
-                    <p>Dima has five years of professional experience in Syria and Canada after receiving a degree in
-                        Civil Engineering from the University in Damascus, Syria. She specializes in water-related
-                        projects where she foster skills defining problems and scoping work for the facilities
-                        construction and rehabilitation.
-                    </p>
+                    <div class="two-column">
+                        <img src="../img/dima.jpg" alt="dima">
+                        <div>
+                            <p>Dima has five years of professional experience in Syria and Canada after receiving a
+                                degree
+                                in
+                                Civil Engineering from the University in Damascus, Syria. She specializes in
+                                water-related
+                                projects where she foster skills defining problems and scoping work for the facilities
+                                construction and rehabilitation.
+                            </p>
 
-                    <p>Dima is a dedicated team player with effective communication skills. She is able to provide a
-                        high-quality result in a timely manner.
-                    </p>
-                    <a
-                        href="https://www.google.com/url?q=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fdima-albdewi-a69649161%2F&sa=D&sntz=1&usg=AFQjCNGa8SCC_V7tM4zCRSNM-z7qBp2xDg">View
-                        her LinkedIn profile</a>
+                            <p>Dima is a dedicated team player with effective communication skills. She is able to
+                                provide a
+                                high-quality result in a timely manner.
+                            </p>
+                            <a
+                                href="https://www.google.com/url?q=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fdima-albdewi-a69649161%2F&sa=D&sntz=1&usg=AFQjCNGa8SCC_V7tM4zCRSNM-z7qBp2xDg">View
+                                her LinkedIn profile</a>
+                        </div>
+                    </div>
                 </div>
 
-                <div>
-                    <img src="../img/masha.jpg" alt="masha">
+
+                <div class="team">
                     <h3>Masha Chernetsova</h3>
-                    <p>Masha is an individual recognized for her dedication and commitment in every aspect of her life;
-                        she exhibits leadership skills while simultaneously understanding how to work with others in a
-                        team-based environment.
-                    </p>
+                    <div class="two-column">
+                        <img src="../img/masha.jpg" alt="masha">
+                        <div>
+                            <p>Masha is an individual recognized for her dedication and commitment in every aspect of
+                                her
+                                life;
+                                she exhibits leadership skills while simultaneously understanding how to work with
+                                others in
+                                a
+                                team-based environment.
+                            </p>
 
-                    <p>She is a bilingual, customer oriented person that enjoys talking to and meeting new people.
-                    </p>
-                    <a
-                        href="https://www.google.com/url?q=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fmasha-chernetsov-b4a321187%2F&sa=D&sntz=1&usg=AFQjCNEaito_mWlG30HSMkoLWVFlDtFcXw">View
-                        her LinkedIn profile</a>
+                            <p>She is a bilingual, customer oriented person that enjoys talking to and meeting new
+                                people.
+                            </p>
+                            <a
+                                href="https://www.google.com/url?q=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fmasha-chernetsov-b4a321187%2F&sa=D&sntz=1&usg=AFQjCNEaito_mWlG30HSMkoLWVFlDtFcXw">View
+                                her LinkedIn profile</a>
+                        </div>
+                    </div>
                 </div>
+
             </div>
-
-
 
             <h3 class="body-heading">Get in touch</h3>
 
