--- a/P2/pages/projects.html
+++ b/P2/pages/projects.html
@@ -36,38 +36,45 @@
         </div>
     </div>
 
-    <div class="wrap-content two-column font-large">
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem assumenda reiciendis similique
-            doloremque nisi placeat iste corporis accusantium atque, quod quaerat numquam maxime sed laborum rem
-            consequatur eius dolore illum.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi, placeat? Lorem ipsum dolor sit amet
-            consectetur adipisicing elit. Omnis obcaecati odio deserunt officiis libero? Accusantium.</p>
-    </div>
-
-    <h3 class="wrap-content body-heading">
-        How we work
-    </h3>
-    <div class="wrap-content two-column">
-        <div class="font-large">
-            <p class="bold">We collaborate with Civil Engineers, Environmental Specialists, Logistical
-                Experts,
-                Socio-economists, Architectural House designers and other experts to complete projects.</p>
-            <p>SEEDA is in the business of sustainable development for a wide variety of engineering
-                projects focused on petroleum, industrial and infrastructure development. </p>
-            <p>We are an association of
-                professionals with wide experience in Canada and some 40 other countries and believe that this
-                experience
-                can be applied to family housing development in Canada that could radically change Canadian housing
-                development as well as lowering the environmental impact of housing construction and its construction
-                and
-                operating costs.</p>
-        </div>
-        <img src="../img/project-body.jpg" alt="man looking at the screen" >
-    </div>
-
-
 
     <main>
+
+        <section class="wrap-content">
+            <div class="two-column font-large">
+                <div>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem assumenda reiciendis similique
+                        doloremque nisi placeat iste corporis accusantium atque, quod quaerat numquam maxime sed laborum rem
+                        consequatur eius dolore illum.</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi, placeat? Lorem ipsum dolor sit amet
+                        consectetur adipisicing elit. Omnis obcaecati odio deserunt officiis libero? Accusantium.</p>
+                </div>
+            </div>
+        
+            <h3 class="body-heading">
+                How we work
+            </h3>
+            <div class="two-column">
+                <div class="font-large">
+                    <p class="bold">We collaborate with Civil Engineers, Environmental Specialists, Logistical
+                        Experts,
+                        Socio-economists, Architectural House designers and other experts to complete projects.</p>
+                    <p>SEEDA is in the business of sustainable development for a wide variety of engineering
+                        projects focused on petroleum, industrial and infrastructure development. </p>
+                    <p>We are an association of
+                        professionals with wide experience in Canada and some 40 other countries and believe that this
+                        experience
+                        can be applied to family housing development in Canada that could radically change Canadian housing
+                        development as well as lowering the environmental impact of housing construction and its
+                        construction
+                        and
+                        operating costs.</p>
+                </div>
+                <img src="../img/project-body.jpg" alt="man looking at the screen">
+            </div>
+    
+        </section>
+
+
         <div class="wrap-content">
             <h3 class="body-heading">Latest projects</h3>
             <div class="projects">
