Fixed image paths

--- a/P2/index.html
+++ b/P2/index.html
@@ -20,6 +20,7 @@
             <ul class="menu">
                 <li><a href="./pages/projects.html">Projects</a></li>
                 <li><a href="./pages/stories.html">Stories</a></li>
+                <li><a href="./pages/portfolio.html">Portfolio</a></li>
                 <li><a href="./pages/about.html">About</a></li>
                 <li><a href="./pages/contact.html">Contact</a></li>
             </ul>
@@ -273,17 +274,15 @@
             </div>
             <div class="footer-list">
                 <p>Info</p>
-                <a href="#">Projects</a>
-                <a href="#">Services</a>
-                <a href="#">Stories</a>
-                <a href="#">About</a>
+                <a href="./pages/projects.html">Projects</a>
+                <a href="./pages/stories.html">Stories</a>
+                <a href="./pages/about.html">About</a>
             </div>
 
             <div class="footer-list">
                 <p>Company</p>
-                <a href="#">Portfolio</a>
-                <a href="#">Community</a>
-                <a href="#">Careers</a>
+                <a href="./pages/portfolio.html">Portfolio</a>
+                <a href="./pages/contact.html">Careers</a>
                 <a href="#">Privacy</a>
             </div>
 
