--- a/P2/pages/portfolio.html
+++ b/P2/pages/portfolio.html
@@ -20,6 +20,7 @@
             <ul class="menu">
                 <li><a href="./projects.html">Projects</a></li>
                 <li><a href="./stories.html">Stories</a></li>
+                <li><a href="./portfolio.html">Portfolio</a></li>
                 <li><a href="./about.html">About</a></li>
                 <li><a href="./contact.html">Contact</a></li>
             </ul>
@@ -31,7 +32,7 @@
             <div class="wrap-content">
                 <h1>Portfolio</h1>
                 <h2>Our experience across the decades.</h2>
-                <img src="/img/more-projects.jpg" alt="people working with devices">
+                <img src="../img/more-projects.jpg" alt="people working with devices">
             </div>
         </div>
     </div>
