--- a/P2/pages/projects.html
+++ b/P2/pages/projects.html
@@ -20,6 +20,7 @@
             <ul class="menu">
                 <li><a href="./projects.html">Projects</a></li>
                 <li><a href="./stories.html">Stories</a></li>
+                <li><a href="./portfolio.html">Portfolio</a></li>
                 <li><a href="./about.html">About</a></li>
                 <li><a href="./contact.html">Contact</a></li>
             </ul>
@@ -31,7 +32,7 @@
             <div class="wrap-content">
                 <h1>Projects</h1>
                 <h2>Our experienced associates participate in projects to help deliver services to clients.</h2>
-                <img src="/img/covers/projects-cover.jpg" alt="project">
+                <img src="../img/covers/projects-cover.jpg" alt="project">
             </div>
         </div>
     </div>
