--- a/P2/pages/stories.html
+++ b/P2/pages/stories.html
@@ -20,6 +20,7 @@
             <ul class="menu">
                 <li><a href="./projects.html">Projects</a></li>
                 <li><a href="./stories.html">Stories</a></li>
+                <li><a href="./portfolio.html">Portfolio</a></li>
                 <li><a href="./about.html">About</a></li>
                 <li><a href="./contact.html">Contact</a></li>
             </ul>
@@ -31,7 +32,7 @@
             <div class="wrap-content">
                 <h1>Stories</h1>
                 <h2>The latest news and stories on our company and events we are involved with.</h2>
-                <img src="/img/covers/stories-cover.jpg" alt="Person looking at wire connections">
+                <img src="../img/covers/stories-cover.jpg" alt="Person looking at wire connections">
             </div>
         </div>
     </div>
