--- a/P2/pages/about.html
+++ b/P2/pages/about.html
@@ -20,6 +20,7 @@
             <ul class="menu">
                 <li><a href="./projects.html">Projects</a></li>
                 <li><a href="./stories.html">Stories</a></li>
+                <li><a href="./portfolio.html">Portfolio</a></li>
                 <li><a href="./about.html">About</a></li>
                 <li><a href="./contact.html">Contact</a></li>
             </ul>
@@ -33,7 +34,7 @@
                 <h2>SEEDA is an enthusiastic, creative and diverse team offering engineering and project management
                     services to assist clients in the successful and sustainable execution of projects.
                 </h2>
-                <img src="/img/covers/about-cover.jpg" alt="">
+                <img src="../img/covers/about-cover.jpg" alt="">
             </div>
         </div>
     </div>
