--- a/P2/pages/contact.html
+++ b/P2/pages/contact.html
@@ -20,6 +20,7 @@
             <ul class="menu">
                 <li><a href="./projects.html">Projects</a></li>
                 <li><a href="./stories.html">Stories</a></li>
+                <li><a href="./portfolio.html">Portfolio</a></li>
                 <li><a href="./about.html">About</a></li>
                 <li><a href="./contact.html">Contact</a></li>
             </ul>
@@ -32,7 +33,7 @@
                 <h1>Contact Us</h1>
                 <h2>Thank you for considering SEEDA!
                 </h2>
-                <img src="/img/covers/contact-us.jpg" alt="">
+                <img src="../img/covers/contact-us.jpg" alt="">
             </div>
         </div>
     </div>
