Fixed article links

--- a/P2/pages/stories.html
+++ b/P2/pages/stories.html
@@ -48,7 +48,7 @@
                         <h3>Hydraulic ram pump systems</h3>
                         <p>It is time to investigate the alternatives for water pumps.
                         </p>
-                        <a href="/pages/hydraulic-ramp.html">Read more ></a>
+                        <a href="../pages/hydraulic-ramp.html">Read more ></a>
                     </div>
                     <img src="../img/article-1.jpg" alt="">
                 </div>
@@ -58,7 +58,7 @@
                         <h3>It's time to step up</h3>
                         <p>A simple idea can evolve to a physical tool that contributes to our daily lifestyle.
                         </p>
-                        <a href="/pages/time-to-step-up.html">Read more ></a>
+                        <a href="../pages/time-to-step-up.html">Read more ></a>
                     </div>
                     <img src="../img/article-2.jpg" alt="">
                 </div>
@@ -68,7 +68,7 @@
                         <h3>Cleantech Forum Asia</h3>
                         <p>A simple idea can evolve to a physical tool that contributes to our daily lifestyle.
                         </p>
-                        <a href="/pages/cleantech-asia.html">Read more ></a>
+                        <a href="../pages/cleantech-asia.html">Read more ></a>
                     </div>
                     <img src="../img/article-3.jpg" alt="a bulldozer ">
                 </div>
@@ -78,7 +78,7 @@
                         <h3>Sustainable Development</h3>
                         <p>A simple idea can evolve to a physical tool that contributes to our daily lifestyle.
                         </p>
-                        <a href="/pages/sustainable-development.html">Read more ></a>
+                        <a href="../pages/sustainable-development.html">Read more ></a>
                     </div>
                     <img src="../img/article-4.jpg" alt="a laptop ">
                 </div>
